# dojima

./: .gitignore  README.md  pyproject.toml
dojima/: main.py
dojima/brokers/: __init__.py  ledgerx.py
