[tool.poetry]
name = "dojima"
version = "0.1.0"
description = "an interface for crypto derivative apis\u001bb"
authors = ["Rahul <haxdds@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^22.3.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
